swagger authentification
